--- a/i18n/it/code.json
+++ b/i18n/it/code.json
@@ -1,376 +1,371 @@
 {
   "theme.NotFound.title": {
-    "message": "Page Not Found"
+    "message": "Pagina non trovata"
   },
   "notfound.title": {
-    "message": "Oops! Page not found."
+    "message": "Ops! Pagina non trovata."
   },
   "notfound.message1": {
-    "message": "The page you are looking for doesn't exist."
+    "message": "La pagina che stai cercando non esiste."
   },
   "notfound.message2": {
-    "message": "You tried to access"
+    "message": "Hai provato ad accedere a"
   },
   "notfound.goBack": {
-    "message": "Go back to"
+    "message": "Torna indietro"
   },
   "notfound.homepageLink": {
-    "message": "the homepage"
+    "message": "alla homepage"
   },
   "theme.ErrorPageContent.title": {
-    "message": "This page crashed."
+    "message": "Questa pagina ha fallito."
   },
   "theme.BackToTopButton.buttonAriaLabel": {
-    "message": "Scroll back to top"
+    "message": "Vai in cima"
   },
   "theme.blog.archive.title": {
-    "message": "Archive"
+    "message": "Archivio"
   },
   "theme.blog.archive.description": {
-    "message": "Archive"
+    "message": "Archivio"
   },
   "theme.blog.paginator.navAriaLabel": {
-    "message": "Blog list page navigation"
+    "message": "Navigazione della lista blog"
   },
   "theme.blog.paginator.newerEntries": {
-    "message": "Newer entries"
+    "message": "Articoli più recenti"
   },
   "theme.blog.paginator.olderEntries": {
-    "message": "Older entries"
+    "message": "Articoli più vecchi"
   },
   "theme.blog.post.paginator.navAriaLabel": {
-    "message": "Blog post page navigation"
+    "message": "Navigazione di un articolo del blog"
   },
   "theme.blog.post.paginator.newerPost": {
-    "message": "Newer post"
+    "message": "Articolo più recente"
   },
   "theme.blog.post.paginator.olderPost": {
-    "message": "Older post"
+    "message": "Articolo più vecchio"
   },
   "theme.tags.tagsPageLink": {
-    "message": "View all tags"
+    "message": "Vedi tutti i tag"
   },
   "theme.docs.breadcrumbs.navAriaLabel": {
     "message": "Breadcrumbs"
   },
   "theme.colorToggle.ariaLabel": {
-    "message": "Switch between dark and light mode (currently {mode})"
+    "message": "Alterna tra modalità scura e chiara (modalità attuale: {mode})"
   },
   "theme.colorToggle.ariaLabel.mode.dark": {
-    "message": "dark mode"
+    "message": "modalità scura"
   },
   "theme.colorToggle.ariaLabel.mode.light": {
-    "message": "light mode"
+    "message": "modalità chiara"
   },
   "theme.docs.DocCard.categoryDescription.plurals": {
-    "message": "1 item|{count} items"
+    "message": "1 elemento|{count} elementi"
   },
   "theme.docs.tagDocListPageTitle.nDocsTagged": {
-    "message": "One doc tagged|{count} docs tagged"
+    "message": "Un documento taggato|{count} documenti taggati"
   },
   "theme.docs.tagDocListPageTitle": {
-    "message": "{nDocsTagged} with \"{tagName}\""
+    "message": "{nDocsTagged} con il tag \"{tagName}\""
   },
   "theme.docs.paginator.navAriaLabel": {
-    "message": "Docs pages"
+    "message": "Pagine documenti"
   },
   "theme.docs.paginator.previous": {
-    "message": "Previous"
+    "message": "Precedente"
   },
   "theme.docs.paginator.next": {
-    "message": "Next"
+    "message": "Successivo"
   },
   "theme.docs.versionBadge.label": {
-    "message": "Version: {versionLabel}"
+    "message": "Versione: {versionLabel}"
   },
   "theme.common.editThisPage": {
-    "message": "Edit this page"
+    "message": "Modifica questa pagina"
   },
   "theme.common.headingLinkTitle": {
-    "message": "Direct link to {heading}"
+    "message": "Link diretto a {heading}"
   },
   "theme.docs.versions.unreleasedVersionLabel": {
-    "message": "This is unreleased documentation for {siteTitle} {versionLabel} version."
+    "message": "Questa è la documentazione di {siteTitle} per la versione {versionLabel}, non ancora rilasciata."
   },
   "theme.docs.versions.unmaintainedVersionLabel": {
-    "message": "This is documentation for {siteTitle} {versionLabel}, which is no longer actively maintained."
+    "message": "Questa è la documentazione di {siteTitle} per la versione {versionLabel}, non più supportata."
   },
   "theme.docs.versions.latestVersionSuggestionLabel": {
-    "message": "For up-to-date documentation, see the {latestVersionLink} ({versionLabel})."
+    "message": "Per vedere la documentazione aggiornata, consulta {latestVersionLink} ({versionLabel})."
   },
   "theme.docs.versions.latestVersionLinkLabel": {
-    "message": "latest version"
+    "message": "ultima versione"
   },
   "theme.lastUpdated.atDate": {
-    "message": " on {date}"
+    "message": " il {date}"
   },
   "theme.lastUpdated.byUser": {
-    "message": " by {user}"
+    "message": " da {user}"
   },
   "theme.lastUpdated.lastUpdatedAtBy": {
-    "message": "Last updated{atDate}{byUser}"
+    "message": "Ultimo aggiornamento{atDate}{byUser}"
   },
   "theme.navbar.mobileVersionsDropdown.label": {
-    "message": "Versions"
+    "message": "Versioni"
   },
   "theme.tags.tagsListLabel": {
-    "message": "Tags:"
+    "message": "Tag:"
   },
   "theme.AnnouncementBar.closeButtonAriaLabel": {
-    "message": "Close"
+    "message": "Chiudi"
   },
   "theme.admonition.caution": {
-    "message": "caution"
+    "message": "attenzione"
   },
   "theme.admonition.danger": {
-    "message": "danger"
+    "message": "pericolo"
   },
   "theme.admonition.info": {
     "message": "info"
   },
   "theme.admonition.note": {
-    "message": "note"
+    "message": "nota"
   },
   "theme.admonition.tip": {
-    "message": "tip"
+    "message": "suggerimento"
   },
   "theme.admonition.warning": {
-    "message": "warning"
+    "message": "avvertimento"
   },
   "theme.blog.sidebar.navAriaLabel": {
-    "message": "Blog recent posts navigation"
+    "message": "Ultimi articoli del blog"
   },
   "theme.CodeBlock.copied": {
-    "message": "Copied"
+    "message": "Copiato"
   },
   "theme.CodeBlock.copyButtonAriaLabel": {
-    "message": "Copy code to clipboard"
+    "message": "Copia il codice negli appunti"
   },
   "theme.CodeBlock.copy": {
-    "message": "Copy"
+    "message": "Copia"
   },
   "theme.CodeBlock.wordWrapToggle": {
-    "message": "Toggle word wrap"
+    "message": "Alterna il ritorno a capo"
   },
   "theme.DocSidebarItem.expandCategoryAriaLabel": {
-    "message": "Expand sidebar category '{label}'"
+    "message": "Espandi la categoria nel menu laterale '{label}'"
   },
   "theme.DocSidebarItem.collapseCategoryAriaLabel": {
-    "message": "Collapse sidebar category '{label}'"
+    "message": "Riduci la categoria nel menu laterale '{label}'"
   },
   "theme.NavBar.navAriaLabel": {
-    "message": "Main"
+    "message": "Menu principale"
   },
   "theme.NotFound.p1": {
-    "message": "We could not find what you were looking for."
+    "message": "Non siamo riusciti a trovare il contenuto che stai cercando."
   },
   "theme.NotFound.p2": {
-    "message": "Please contact the owner of the site that linked you to the original URL and let them know their link is broken."
+    "message": "Contatta il proprietario del sito che ti ha collegato all'URL originale e digli che il suo link è rotto."
   },
   "theme.TOCCollapsible.toggleButtonLabel": {
-    "message": "On this page"
+    "message": "In questa pagina"
   },
   "theme.navbar.mobileLanguageDropdown.label": {
-    "message": "Languages"
+    "message": "Lingue"
   },
   "theme.blog.post.readingTime.plurals": {
-    "message": "One min read|{readingTime} min read"
+    "message": "Un minuto di lettura|{readingTime} minuti di lettura"
   },
   "theme.docs.sidebar.navAriaLabel": {
-    "message": "Docs sidebar"
+    "message": "Menu laterale documenti"
   },
   "theme.docs.sidebar.collapseButtonTitle": {
-    "message": "Collapse sidebar"
+    "message": "Riduci il menu laterale"
   },
   "theme.docs.sidebar.collapseButtonAriaLabel": {
-    "message": "Collapse sidebar"
+    "message": "Riduci il menu laterale"
   },
   "theme.docs.breadcrumbs.home": {
-    "message": "Home page"
+    "message": "Home"
   },
   "theme.blog.post.readMore": {
-    "message": "Read more"
+    "message": "Leggi di più"
   },
   "theme.blog.post.readMoreLabel": {
-    "message": "Read more about {title}"
+    "message": "Leggi di più su {title}"
   },
   "theme.docs.sidebar.closeSidebarButtonAriaLabel": {
-    "message": "Close navigation bar"
+    "message": "Chiudi la barra di navigazione"
   },
   "theme.navbar.mobileSidebarSecondaryMenu.backButtonLabel": {
-    "message": "← Back to main menu"
+    "message": "← Torna al menu principale"
   },
   "theme.docs.sidebar.expandButtonTitle": {
-    "message": "Expand sidebar"
+    "message": "Espandi il menu laterale"
   },
   "theme.docs.sidebar.expandButtonAriaLabel": {
-    "message": "Expand sidebar"
+    "message": "Espandi il menu laterale"
   },
   "theme.docs.sidebar.toggleSidebarButtonAriaLabel": {
-    "message": "Toggle navigation bar"
+    "message": "Alterna il menu di navigazione"
   },
   "theme.SearchBar.seeAll": {
-    "message": "See all {count} results"
+    "message": "Vedi tutti i {count} risultati"
   },
   "theme.SearchPage.documentsFound.plurals": {
-    "message": "One document found|{count} documents found"
+    "message": "Un documento trovato|{count} documenti trovati"
   },
   "theme.SearchPage.existingResultsTitle": {
-    "message": "Search results for \"{query}\""
+    "message": "Risultati di ricerca per \"{query}\""
   },
   "theme.SearchPage.emptyResultsTitle": {
-    "message": "Search the documentation"
+    "message": "Cerca nella documentazione"
   },
   "theme.SearchPage.inputPlaceholder": {
-    "message": "Type your search here"
+    "message": "Inserisci la tua ricerca qui"
   },
   "theme.SearchPage.inputLabel": {
-    "message": "Search"
+    "message": "Ricerca"
   },
   "theme.SearchPage.algoliaLabel": {
-    "message": "Search by Algolia"
+    "message": "Ricerca tramite Algolia"
   },
   "theme.SearchPage.noResultsText": {
-    "message": "No results were found"
+    "message": "Nessun risultato"
   },
   "theme.SearchPage.fetchingNewResults": {
-    "message": "Fetching new results..."
+    "message": "Ricerca nuovi risultati..."
   },
   "theme.SearchBar.label": {
-    "message": "Search"
+    "message": "Ricerca"
   },
   "theme.SearchModal.searchBox.resetButtonTitle": {
-    "message": "Clear the query"
+    "message": "Ripristina ricerca"
   },
   "theme.SearchModal.searchBox.cancelButtonText": {
-    "message": "Cancel"
-  },
-  "theme.SearchModal.startScreen.recentSearchesTitle": {
-    "message": "Recent"
+    "message": "Annulla"
   },
   "theme.SearchModal.startScreen.noRecentSearchesText": {
-    "message": "No recent searches"
+    "message": "Nessuna ricerca recente"
   },
   "theme.SearchModal.startScreen.saveRecentSearchButtonTitle": {
-    "message": "Save this search"
+    "message": "Salva questa ricerca"
   },
   "theme.SearchModal.startScreen.removeRecentSearchButtonTitle": {
-    "message": "Remove this search from history"
+    "message": "Rimuovi questa ricerca dalla cronologia"
   },
   "theme.SearchModal.startScreen.favoriteSearchesTitle": {
-    "message": "Favorite"
+    "message": "Preferiti"
   },
   "theme.SearchModal.startScreen.removeFavoriteSearchButtonTitle": {
-    "message": "Remove this search from favorites"
+    "message": "Rimuovi questa ricerca dai preferiti"
   },
   "theme.SearchModal.errorScreen.titleText": {
-    "message": "Unable to fetch results"
+    "message": "Impossibile trovare risultati"
   },
   "theme.SearchModal.errorScreen.helpText": {
-    "message": "You might want to check your network connection."
+    "message": "Verifica la tua connessione a internet."
   },
   "theme.SearchModal.footer.selectText": {
-    "message": "to select"
+    "message": "Seleziona"
   },
   "theme.SearchModal.footer.selectKeyAriaLabel": {
-    "message": "Enter key"
+    "message": "Tasto Invio"
   },
   "theme.SearchModal.footer.navigateText": {
-    "message": "to navigate"
+    "message": "Naviga"
   },
   "theme.SearchModal.footer.navigateUpKeyAriaLabel": {
-    "message": "Arrow up"
+    "message": "Freccia su"
   },
   "theme.SearchModal.footer.navigateDownKeyAriaLabel": {
-    "message": "Arrow down"
+    "message": "Freccia giù"
   },
   "theme.SearchModal.footer.closeText": {
-    "message": "to close"
+    "message": "Chiudi"
   },
   "theme.SearchModal.footer.closeKeyAriaLabel": {
-    "message": "Escape key"
+    "message": "Tasto Esc"
   },
   "theme.SearchModal.footer.searchByText": {
-    "message": "Search by",
-    "description": "The text explain that the search is making by Algolia"
+    "message": "Ricerca tramite Algolia"
   },
   "theme.SearchModal.noResultsScreen.noResultsText": {
-    "message": "No results for"
+    "message": "Nessun risultato per questa ricerca"
   },
   "theme.SearchModal.noResultsScreen.suggestedQueryText": {
-    "message": "Try searching for"
+    "message": "Prova a cercare"
   },
   "theme.SearchModal.noResultsScreen.reportMissingResultsText": {
-    "message": "Believe this query should return results?"
+    "message": "Pensi che questa ricerca dovrebbe produrre dei risultati?"
   },
   "theme.SearchModal.noResultsScreen.reportMissingResultsLinkText": {
-    "message": "Let us know."
+    "message": "Segnalalo"
   },
   "theme.SearchModal.placeholder": {
-    "message": "Search docs"
+    "message": "Cerca documentazione"
   },
   "theme.blog.post.plurals": {
-    "message": "One post|{count} posts"
+    "message": "Un articolo|{count} articoli"
   },
   "theme.blog.tagTitle": {
-    "message": "{nPosts} tagged with \"{tagName}\""
+    "message": "{nPosts} taggati \"{tagName}\""
   },
   "theme.blog.author.pageTitle": {
     "message": "{authorName} - {nPosts}"
   },
   "theme.blog.authorsList.pageTitle": {
-    "message": "Authors",
-    "description": "The title of the authors page"
+    "message": "Autori"
   },
   "theme.blog.authorsList.viewAll": {
-    "message": "View all authors"
+    "message": "Vedi tutti gli autori"
   },
   "theme.blog.author.noPosts": {
-    "message": "This author has not written any posts yet."
+    "message": "Questo autore non ha ancora scritto articoli."
   },
   "theme.contentVisibility.unlistedBanner.title": {
-    "message": "Unlisted page"
+    "message": "Pagina non elencata"
   },
   "theme.contentVisibility.unlistedBanner.message": {
-    "message": "This page is unlisted. Search engines will not index it, and only users having a direct link can access it."
+    "message": "Questa pagina non è elencata. I motori di ricerca non la indicizzano e solo gli utenti con un link diretto possono accedervi."
   },
   "theme.contentVisibility.draftBanner.title": {
-    "message": "Draft page"
+    "message": "Pagina in bozza"
   },
   "theme.contentVisibility.draftBanner.message": {
-    "message": "This page is a draft. It will only be visible in dev and be excluded from the production build."
+    "message": "Questa pagina è in bozza. È visibile in fase di sviluppo e non è inclusa nella versione di produzione."
   },
   "theme.ErrorPageContent.tryAgain": {
-    "message": "Try again"
+    "message": "Riprova"
   },
   "theme.common.skipToMainContent": {
-    "message": "Skip to main content"
+    "message": "Vai al contenuto principale"
   },
   "theme.tags.tagsPageTitle": {
-    "message": "Tags"
+    "message": "Tag"
   },
   "Get Started": {
-    "message": "Get Started"
+    "message": "Inizia"
   },
   "Supported devices": {
-    "message": "Supported devices"
+    "message": "Dispositivi supportati"
   },
   "Elevate Your LEGO® Creations": {
-    "message": "Elevate Your LEGO® Creations"
+    "message": "Eleva le tue creazioni LEGO® a un altro livello"
   },
   "Download the Controlz": {
-    "message": "Download the Controlz"
+    "message": "Scarica Controlz"
   },
   "You can download the app from the official stores:": {
-    "message": "You can download the app from the official stores:"
+    "message": "Puoi scaricare l'app dai negozi ufficiali:"
   },
   "theme.colorToggle.ariaLabel.mode.system": {
-    "message": "system mode"
+    "message": "modalità di sistema"
   },
   "theme.navbar.mobileDropdown.collapseButton.expandAriaLabel": {
-    "message": "Expand the dropdown"
+    "message": "Espandi il menu"
   },
   "theme.navbar.mobileDropdown.collapseButton.collapseAriaLabel": {
-    "message": "Collapse the dropdown"
+    "message": "Riduci il menu"
   }
 }
